--- a/final project/heart_failure_analysis_auto_data.ipynb
+++ b/final project/heart_failure_analysis_auto_data.ipynb
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "cb574d05",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
     }
    ],
    "source": [
-    "\n",
+    "# frequency distribution histograms\n",
     "numeric_cols = df.select_dtypes(include=np.number).columns.tolist()\n",
     "df[numeric_cols].hist(figsize=(15,10))\n",
     "plt.tight_layout()\n",
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "a9ed0c43",
    "metadata": {},
    "outputs": [
@@ -328,8 +328,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "logistic regression roc‑auc: 0.875 ± 0.032\n",
-      "random forest       roc‑auc: 0.899 ± 0.026\n",
+      "logistic regression roc‑auc: 0.875 plus/minus 0.032\n",
+      "random forest roc‑auc: 0.899 plus/minus 0.026\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0      0.830     0.951     0.886        41\n",
@@ -379,7 +379,7 @@
     "y = df[target]\n",
     "\n",
     "# preprocessing transformer\n",
-    "numeric_cols     = X.select_dtypes(include=np.number).columns.tolist()\n",
+    "numeric_cols= X.select_dtypes(include=np.number).columns.tolist()\n",
     "categorical_cols = [c for c in X.columns if c not in numeric_cols]\n",
     "preprocessor = ColumnTransformer([\n",
     "    ('num', StandardScaler(), numeric_cols),\n",
@@ -397,12 +397,12 @@
     "])\n",
     "\n",
     "# cross-validation to compare models\n",
-    "cv      = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
     "log_auc = cross_val_score(log_reg, X, y, cv=cv, scoring='roc_auc')\n",
-    "rf_auc  = cross_val_score(rf,     X, y, cv=cv, scoring='roc_auc')\n",
+    "rf_auc = cross_val_score(rf, X, y, cv=cv, scoring='roc_auc')\n",
     "\n",
-    "print(f'logistic regression roc‑auc: {log_auc.mean():.3f} ± {log_auc.std():.3f}')\n",
-    "print(f'random forest       roc‑auc: {rf_auc.mean():.3f} ± {rf_auc.std():.3f}')\n",
+    "print(f'logistic regression roc‑auc: {log_auc.mean():.3f} plus/minus {log_auc.std():.3f}')\n",
+    "print(f'random forest roc‑auc: {rf_auc.mean():.3f} plus/minus {rf_auc.std():.3f}')\n",
     "\n",
     "# hold-out train/test split\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
@@ -411,15 +411,15 @@
     "best_model = log_reg if log_auc.mean() >= rf_auc.mean() else rf\n",
     "\n",
     "# train and predict\n",
-    "best_model.fit(X_train, y_train)\n",
-    "y_pred  = best_model.predict(X_test)\n",
+    "best_model.fit(X_train, y_train)    \n",
+    "y_pred = best_model.predict(X_test)\n",
     "y_proba = best_model.predict_proba(X_test)[:,1]\n",
     "\n",
     "# final evaluation\n",
     "print(classification_report(y_test, y_pred, digits=3))\n",
     "print(f'hold‑out roc‑auc = {roc_auc_score(y_test, y_proba):.3f}')\n",
     "\n",
-    "# ROC curve plot\n",
+    "#ROC curve plot\n",
     "fpr, tpr, _ = roc_curve(y_test, y_proba)\n",
     "plt.figure(figsize=(6,5))\n",
     "plt.plot(fpr, tpr, label=f'{best_model.steps[-1][0]} (AUC = {roc_auc_score(y_test, y_proba):.3f})')\n",
